[gd_scene load_steps=9 format=3 uid="uid://guylsgegxwxb"]

[ext_resource type="Script" path="res://scripts/white_hole.gd" id="1_h7gu7"]
[ext_resource type="Texture2D" uid="uid://cyf177o7sdemr" path="res://assets/black_hole_sprite.png" id="2_a7r8o"]
[ext_resource type="Texture2D" uid="uid://dbidkaacmqg53" path="res://assets/planet_highlight_blank.png" id="2_cx3f4"]
[ext_resource type="Texture2D" uid="uid://btiy56hi8xki6" path="res://assets/WhiteHole.png" id="3_4n47c"]
[ext_resource type="AudioStream" uid="uid://d0njp2axq6jer" path="res://assets/sounds/change_gravity.mp3" id="5_7l6df"]
[ext_resource type="AudioStream" uid="uid://wakgxox1ilt4" path="res://assets/sounds/black_hole_ambience_trimmed.mp3" id="6_jblqw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ysjjs"]
radius = 7.89911

[sub_resource type="CircleShape2D" id="CircleShape2D_blx7q"]
radius = 7.89911

[node name="WhiteHole" type="Node2D"]
script = ExtResource("1_h7gu7")

[node name="InnerBlackHole" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="ForwardHighlight" type="Sprite2D" parent="InnerBlackHole"]
unique_name_in_owner = true
visible = false
modulate = Color(0.235294, 0.34902, 1, 1)
scale = Vector2(2.89, 2.89)
texture = ExtResource("2_cx3f4")

[node name="ReverseHighlight" type="Sprite2D" parent="InnerBlackHole"]
unique_name_in_owner = true
visible = false
modulate = Color(0.835294, 0, 0.262745, 1)
scale = Vector2(2.89, 2.89)
texture = ExtResource("2_cx3f4")

[node name="MoreOuterCircle" type="Sprite2D" parent="InnerBlackHole"]
unique_name_in_owner = true
visible = false
modulate = Color(0.721569, 0.721569, 0.721569, 1)
scale = Vector2(1.63159, 1.4539)
texture = ExtResource("2_a7r8o")
offset = Vector2(0.352102, -1.60422)

[node name="OuterCircle" type="Sprite2D" parent="InnerBlackHole"]
unique_name_in_owner = true
visible = false
modulate = Color(0.882353, 0.882353, 0.882353, 1)
scale = Vector2(1.24823, 1.31206)
texture = ExtResource("2_a7r8o")
offset = Vector2(0.102289, -0.407516)

[node name="InnerCircle" type="Sprite2D" parent="InnerBlackHole"]
unique_name_in_owner = true
visible = false
texture = ExtResource("2_a7r8o")

[node name="WhiteHole" type="Sprite2D" parent="InnerBlackHole"]
scale = Vector2(0.292, 0.292)
texture = ExtResource("3_4n47c")

[node name="HoleCollision" type="CollisionShape2D" parent="InnerBlackHole"]
scale = Vector2(7.85, 7.85)
shape = SubResource("CircleShape2D_ysjjs")

[node name="HSlider" type="HSlider" parent="."]
unique_name_in_owner = true
modulate = Color(0.890196, 0.247059, 0.121569, 1)
offset_left = -21.0
offset_top = -7.0
offset_right = 20.0
offset_bottom = 9.0
editable = false
scrollable = false

[node name="OuterArea" type="Area2D" parent="."]
visible = false
scale = Vector2(3, 3)

[node name="OuterCollision" type="CollisionShape2D" parent="OuterArea"]
scale = Vector2(61.6225, 61.6225)
shape = SubResource("CircleShape2D_blx7q")

[node name="OuterArea2" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="OuterCollision" type="CollisionShape2D" parent="OuterArea2"]
scale = Vector2(61.6225, 61.6225)
shape = SubResource("CircleShape2D_blx7q")

[node name="ChangeGravityPlayer" type="AudioStreamPlayer2D" parent="."]
unique_name_in_owner = true
scale = Vector2(61.6225, 61.6225)
stream = ExtResource("5_7l6df")
volume_db = 6.0

[node name="AmbiencePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_jblqw")
autoplay = true

[connection signal="body_entered" from="InnerBlackHole" to="." method="_on_body_entered"]
[connection signal="mouse_entered" from="InnerBlackHole" to="." method="_on_black_hole_mouse_entered"]
[connection signal="mouse_exited" from="InnerBlackHole" to="." method="_on_black_hole_mouse_exited"]
[connection signal="body_entered" from="OuterArea2" to="." method="_on_outer_collision_entered"]
[connection signal="body_exited" from="OuterArea2" to="." method="_on_outer_collision_exited"]
